Fix settings slider track visibility
- Changed slider track background to solid color (#3b4261) for better contrast
- Added Firefox support with -moz-range-track

--- a/static/assisted-voice.css
+++ b/static/assisted-voice.css
@@ -1360,7 +1360,14 @@ input[type=range] {
 input[type=range]::-webkit-slider-track {
     width: 100%;
     height: 6px;
-    background: rgba(255, 255, 255, 0.1);
+    background: #3b4261;
+    border-radius: 3px;
+}
+
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 6px;
+    background: #3b4261;
     border-radius: 3px;
 }
 
